--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/portfolio/assets/asd1.b2ab655c.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/asd1.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <script type="module" crossorigin src="/portfolio/assets/index.992dd1ba.js"></script>
-    <link rel="stylesheet" href="/portfolio/assets/index.90783341.css">
+    <script type="module" crossorigin src="/assets/index.4f470dd9.js"></script>
+    <link rel="stylesheet" href="/assets/index.a682569b.css">
   </head>
   <body>
     <div id="root"></div>
